# SandyMaxxing

./: .gitignore  DEVELOPMENT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
.claude/: settings.local.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  crypto.rs  error.rs  main.rs
src-tauri/src/ai/: mod.rs  plan_generator.rs  smoothie_parser.rs
src-tauri/src/commands/: diet_cmd.rs  family_cmd.rs  foods_cmd.rs  measurements_cmd.rs  mod.rs  pdf_cmd.rs  plan_cmd.rs  recipes_cmd.rs  settings_cmd.rs  shopping_cmd.rs  smoothie_cmd.rs  users_cmd.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/repo/: diets.rs  family.rs  foods.rs  forbidden.rs  measurements.rs  mod.rs  recipes.rs  saved_plans.rs  settings.rs  smoothies.rs  users.rs
src-tauri/src/services/: family_compat.rs  meal_planner.rs  meal_validator.rs  mod.rs  pdf_export.rs  shopping_list.rs
src/api/: invoke.ts
src/components/: AiProgress.tsx  Layout.tsx  Tabs.tsx  UserSwitcher.tsx
src/components/charts/: LineChart.tsx
src/hooks/: useAiProgress.ts
src/i18n/: es.ts
src/pages/: Ajustes.tsx  AjustesTabs.tsx  Alimentos.tsx  Cocinar.tsx  DisenarComida.tsx  Familia.tsx  GeneradorPlan.tsx  Historial.tsx  Licuados.tsx  ListaCompras.tsx  Mediciones.tsx  MiPlan.tsx  PlanSemanal.tsx  Progreso.tsx  Prohibidos.tsx  Usuarios.tsx
src/state/: activeUser.ts
