[package]
name = "sandymaxxing"
version = "1.0.4"
description = "SandyMaxxing - nutrition & family meal planning desktop app"
authors = ["SandyMaxxing"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.7"
aes-gcm = "0.10"
rand = "0.8"
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
